[project]
name = "developstoday-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]
